--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Página Desenvolvimento de Sistemas</title>
+    <link rel="stylesheet" href="style.css">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
@@ -12,24 +13,24 @@
     <h1>Curso Técnico em Desenvolvimento de Sistemas </h1>
     <h2>Colégio Tancredo Neves - Francisco Beltrão/PR</h2>
     
-    <p>O Técnico em Desenvolvimento de Sistemas será habilitado para:
-- Desenvolver sistemas computacionais utilizando ambiente de desenvolvimento.
-- Dimensionar requisitos e funcionalidades do sistema.
-- Realizar testes funcionais de programas de computador e aplicativos.
-- Manter registros para análise e refinamento de resultados.
-- Executar manutenção de programas de computador e suporte técnico.
-- Realizar modelagem de aplicações computacionais.
-- Codificar aplicações e rotinas utilizando linguagens de programação específicas.
-- Executar alterações e manutenções em aplicações e rotinas de acordo com as definições estabelecidas.
-- Prestar apoio técnico na elaboração da documentação de sistemas.
-- Realizar prospecções, testes e avaliações de ferramentas e produtos de desenvolvimento de sistemas.
+    <h3>O Técnico em Desenvolvimento de Sistemas será habilitado para:</h3>
+<p>- Desenvolver sistemas computacionais utilizando ambiente de desenvolvimento.</p>
+<p>- Dimensionar requisitos e funcionalidades do sistema.</p>
+<p>- Realizar testes funcionais de programas de computador e aplicativos.</p>
+<p>- Manter registros para análise e refinamento de resultados.</p>
+<p>- Executar manutenção de programas de computador e suporte técnico.</p>
+<p>- Realizar modelagem de aplicações computacionais.</p>
+<p>- Codificar aplicações e rotinas utilizando linguagens de programação específicas.</p>
+<p>- Executar alterações e manutenções em aplicações e rotinas de acordo com as definições estabelecidas.</p>
+<p>- Prestar apoio técnico na elaboração da documentação de sistemas.</p>
+<p>- Realizar prospecções, testes e avaliações de ferramentas e produtos de desenvolvimento de sistemas.</p>
     </p>
 
-    <p>Para atuação como Técnico em Desenvolvimento de Sistemas, são fundamentais:
-- Conhecimentos e saberes relacionados aos processos de planejamento e execução de projetos computacionais de forma a garantir a entrega de produtos digitais, análise de softwares, testagem de protótipos, de acordo com suas finalidades.
-- Conhecimentos e saberes relacionados às normas técnicas, à liderança de equipes, à solução de problemas técnicos e à assertividade na comunicação de laudos e análises.!</p>
+    <h3><span>atuação como Técnico em Desenvolvimento de Sistemas, são fundamentais:</span> </h3>
+<br>- Conhecimentos e saberes relacionados aos processos de planejamento e execução de projetos computacionais de forma a garantir a entrega de produtos digitais, análise de softwares, testagem de protótipos, de acordo com suas finalidades.</br> 
+<p>- Conhecimentos e saberes relacionados às normas técnicas, à liderança de equipes, à solução de problemas técnicos e à assertividade na comunicação de laudos e análises.!</p>
 
-     <p>Venha fazer sua matrícula!!!</p>
+     <h4>Venha fazer sua matrícula!!!</h4>
 
 
 </body>
