Atualização da página Index e Style

--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,10 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <img  id="imagem-1" src="Logo.TDS.png">
+    <img src="Logo.Escola.png">
     <h1>Curso Técnico em Desenvolvimento de Sistemas </h1>
     <h2>Colégio Tancredo Neves - Francisco Beltrão/PR</h2>
-    
     <h3>O Técnico em Desenvolvimento de Sistemas será habilitado para:</h3>
 <p>- Desenvolver sistemas computacionais utilizando ambiente de desenvolvimento.</p>
 <p>- Dimensionar requisitos e funcionalidades do sistema.</p>
@@ -26,11 +27,11 @@
 <p>- Realizar prospecções, testes e avaliações de ferramentas e produtos de desenvolvimento de sistemas.</p>
     </p>
 
-    <h3><span>atuação como Técnico em Desenvolvimento de Sistemas, são fundamentais:</span> </h3>
-<br>- Conhecimentos e saberes relacionados aos processos de planejamento e execução de projetos computacionais de forma a garantir a entrega de produtos digitais, análise de softwares, testagem de protótipos, de acordo com suas finalidades.</br> 
+    <h3><span>Atuação como Técnico em Desenvolvimento de Sistemas, são fundamentais:</span> </h3>
+<p>- Conhecimentos e saberes relacionados aos processos de planejamento e execução de projetos computacionais de forma a garantir a entrega de produtos digitais, análise de softwares, testagem de protótipos, de acordo com suas finalidades.</p> 
 <p>- Conhecimentos e saberes relacionados às normas técnicas, à liderança de equipes, à solução de problemas técnicos e à assertividade na comunicação de laudos e análises.!</p>
 
-     <h4>Venha fazer sua matrícula!!!</h4>
+     <h4 id="ultimo-paragrafo">Venha fazer sua matrícula!!!</h4>
 
 
 </body>
